--- a/src/Sharpen.Engine/Sharpen.Engine.csproj
+++ b/src/Sharpen.Engine/Sharpen.Engine.csproj
@@ -181,6 +181,7 @@
     <Compile Include="ISingleSyntaxTreeAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharpenEngine.cs" />
+    <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForSetAccessors.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForGetAccessors.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForDestructors.cs" />
     <Compile Include="SharpenSuggestions\CSharp70\UseExpressionBodyForConstructors.cs" />
