--- a/tests/smoke/CSharp70/CSharp70.csproj
+++ b/tests/smoke/CSharp70/CSharp70.csproj
@@ -48,6 +48,10 @@
     <Compile Include="UseExpressionBodyForDestructors\DestructorsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForDestructors\DestructorsThatAreNotCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForDestructors\EmptyDestructors.cs" />
+    <Compile Include="UseExpressionBodyForSetAccessors\EmptySetAccessors.cs" />
+    <Compile Include="UseExpressionBodyForSetAccessors\SetAccessorsThatAlreadyHaveExpressionBody.cs" />
+    <Compile Include="UseExpressionBodyForSetAccessors\SetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
+    <Compile Include="UseExpressionBodyForSetAccessors\SetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessors\GetAccessorsThatAlreadyHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessors\GetAccessorsThatAreCandidatesToHaveExpressionBody.cs" />
     <Compile Include="UseExpressionBodyForGetAccessors\GetAccessorsThatAreNotCandidatesToHaveExpressionBody.cs" />
