--- a/src/Sharpen.VisualStudioExtension/packages.config
+++ b/src/Sharpen.VisualStudioExtension/packages.config
@@ -30,7 +30,7 @@
   <package id="Microsoft.VisualStudio.Utilities" version="15.0.26606" targetFramework="net47" />
   <package id="Microsoft.VisualStudio.Validation" version="15.3.15" targetFramework="net47" />
   <package id="Microsoft.VSSDK.BuildTools" version="15.1.192" targetFramework="net47" developmentDependency="true" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net47" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net47" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net47" />
@@ -47,23 +47,23 @@
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net47" />
-  <package id="System.IO" version="4.3.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.IO.Compression" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net47" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net47" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" requireReinstallation="true" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net47" />
